--- a/app/views/directors/show.html.erb
+++ b/app/views/directors/show.html.erb
@@ -15,8 +15,21 @@
       <dd><%= @director.bio %></dd>
 
       <dt>Image url</dt>
-      <dd><%= @director.image_url %></dd>
+      <dd><img src="<%= @director.image_url %>"></dd>
 
+      <dt>Movie Count</dt>
+      <dd>
+        <%= Movie.where({ :director_id => @director.id}).count %>
+      </dd>
+
+      <dt>Filmography</dt>
+      <dd>
+        <ul>
+        <%= Movie.where({ :director_id => @director.id}).each do |movie| %>  
+          <li> <%= movie.title %> (<%= movie.year %>) </li>
+        <% end %>
+        </ul>
+      </dd>
     </dl>
 
     <div class="btn-group btn-group-justified">
