--- a/app/views/directors/show.html.erb
+++ b/app/views/directors/show.html.erb
@@ -25,7 +25,7 @@
       <dt>Filmography</dt>
       <dd>
         <ul>
-        <%= Movie.where({ :director_id => @director.id}).each do |movie| %>  
+        <% Movie.where({ :director_id => @director.id}).each do |movie| %>  
           <li> <%= movie.title %> (<%= movie.year %>) </li>
         <% end %>
         </ul>
